chore: bump version to 5.0.2 and enhance logging in services